<resources>
    <string name="app_name">Submission2Jetpack</string>
    <string name="movie_catalogue">Architecture\nComponent</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="overview">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>